implement delete permission (#6)
